Priority Words come first in SearchBox